refactor: add person router

--- a/projects/components/src/lib/population/population.component.html
+++ b/projects/components/src/lib/population/population.component.html
@@ -3,4 +3,5 @@
   <ul>
     <li *ngFor="let person of population" (click)="openPersonData()">{{person.firstname}} {{person.lastname}}</li>
   </ul>
+  <person-component *ngIf="isOpen"></person-component>
 </ul>
