--- a/projects/components/src/lib/population/population.component.html
+++ b/projects/components/src/lib/population/population.component.html
@@ -1,7 +1,10 @@
-<h1></h1>
-<ul>
+<div>
   <ul>
-    <li *ngFor="let person of population" (click)="openPersonData()">{{person.firstname}} {{person.lastname}}</li>
+    <ul>
+      <li *ngFor="let person of population" (click)="openPersonData()">{{person.firstname}} {{person.lastname}}</li>
+    </ul>
   </ul>
-  <person-component *ngIf="isOpen"></person-component>
-</ul>
+  <div *ngIf="isOpen">
+    <!-- <person-component></person-component> -->
+  </div>
+</div>
