--- a/projects/components/src/lib/person/person.component.html
+++ b/projects/components/src/lib/person/person.component.html
@@ -1,6 +1,3 @@
-<form [formGroup]="personForm" (ngSubmit)="onSubmit()">
-  <input type="text" formControlName="firstName">
-  <input type="text" formControlName="lastName">
-  <input type="text" formControlName="age">
-  <button type="submit" [disabled]="!personForm.valid">save</button>
-</form>
+<div>
+  <p>{{person?.firstname}}</p>
+</div>
