--- a/projects/components/src/lib/population/population.component.html
+++ b/projects/components/src/lib/population/population.component.html
@@ -1,10 +1,7 @@
 <div>
   <ul>
-    <ul>
-      <li *ngFor="let person of population" (click)="openPersonData()">{{person.firstname}} {{person.lastname}}</li>
-    </ul>
+    <li *ngFor="let person of population" (click)="openPersonData(person.id)">
+      {{person.firstname}} {{person.lastname}}
+    </li>
   </ul>
-  <div *ngIf="isOpen">
-    <!-- <person-component></person-component> -->
-  </div>
 </div>
